app/src/main/java/com/example/shiftTutorial/enums/AlertTypes.java
package com.example.shiftTutorial.enums;

// error: identifier expected
public enum AlertTypes {
    INFO,
    CONFIRM,
    ERROR
}
